chore: fix spacing in gist

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -9,7 +9,7 @@
     font-family: Nunito, system-ui, sans-serif;
   }
 
-  .markdown a {
+  .md a {
     color: rgb(134 239 172);
     text-decoration-line: underline;
     text-underline-offset: 4px;
